--- a/site/minecraft/files/minecraft.service
+++ b/site/minecraft/files/minecraft.service
@@ -6,7 +6,7 @@ After=network.target
 
 [Service]
 WorkingDirectory=/opt/minecraft
-ExecStart=/usr/bin/java -Xmx512M -Xms32M -jar minecraft_server.1.12.2.jar nogui
+ExecStart=/usr/bin/java -Xmx512M -Xms32M -jar minecraft_server.jar nogui
 
 [Install]
 WantedBy=multi-user.target
