--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,10 +1,14 @@
 ---   
 version: 5   
    
-hierarchy:   
-    - name: "Per-node data"  # Human - readable name.   
-      path: "nodes/%{trusted.certname}.yaml"  
-    - name: "Per-OS defaults"   
-      path: "os/%{facts.os.family}.yaml"   
-    - name: "Common data"   
-      path: "common.yaml" 
+hierarchy:
+  - name: "Encrypted data"
+    lookup_key: eyaml_lookup_key
+    paths:
+      - "nodes/%{trusted.certname}.yaml"  
+      - "os/%{facts.os.family}.yaml"
+      - "common.yaml" 
+    options:
+      pkcs7_private_key: /etc/puppetlabs/puppet/eyaml/private_key.pkcs7.pem
+      pkcs7_public_key:  /etc/puppetlabs/puppet/eyaml/public_key.pkcs7.pem 
+ 
